# spath_cli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  release.toml  rustfmt.toml  spath.json
.github/workflows/: ci.yml  release.yml
docs/: README.ja.md  README.ru.md
installer/: spath-installer.nsi
src/: backup.rs  constants.rs  formatter.rs  lib.rs  main.rs  models.rs  registry.rs  utils.rs
src/analyzer/: mod.rs
src/fixer/: mod.rs
src/migrator/: mod.rs
src/scanner/: mod.rs
src/security/: acl.rs  exploits.rs  mod.rs
src/visualizer/: mod.rs
tests/: analyzer_tests.rs  analyzer_tests_new.rs  fixer_tests.rs  fixer_tests_new.rs  integration_tests.rs  integration_workflow_tests.rs  migrator_tests.rs  property_tests.rs  registry_tests.rs  scanner_tests.rs  scanner_tests_new.rs  security_tests.rs  utils_tests.rs  visualizer_tests.rs
