[package]
name = "spath-cli"
version = "0.1.0"
edition = "2021"
authors = ["vremyavnikuda <hopperplayer0@gmail.com>"]
description = "A Windows PATH security scanner and fixer - detects and fixes unquoted paths with spaces"
license = "MIT"
repository = "https://github.com/vremyavnikuda/spath"
homepage = "https://github.com/vremyavnikuda/spath"
documentation = "https://github.com/vremyavnikuda/spath"
readme = "README.md"
keywords = ["windows", "path", "security", "cli", "scanner"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    "target/",
    ".git/",
    ".github/",
    "tests/",
]

[lib]
name = "spath_lib"
path = "src/lib.rs"

[[bin]]
name = "spath"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.4", features = ["derive"] }
colored = "2.0"
fs2 = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
windows = { version = "0.52", features = ["Win32_System_Environment", "Win32_Foundation"] }
winreg = "0.52"
