[package]
name = "spath-cli"
version = "0.1.1"
edition = "2021"
authors = ["vremyavnikuda <hopperplayer0@gmail.com>"]
description = "A Windows PATH security scanner and fixer - detects and fixes unquoted paths with spaces"
license = "MIT"
repository = "https://github.com/vremyavnikuda/spath_cli"
homepage = "https://github.com/vremyavnikuda/spath_cli"
documentation = "https://github.com/vremyavnikuda/spath_cli"
readme = "README.md"
keywords = ["windows", "path", "security", "cli", "scanner"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    "target/",
    ".git/",
    ".github/",
    "tests/",
]

[[bin]]
name = "spath"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.4", features = ["derive"] }
colored = "2.0"
fs2 = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
windows = { version = "0.52", features = [
    "Win32_System_Environment",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Threading",
] }
winreg = "0.52"

[dev-dependencies]
mockall = "0.13"
proptest = "1.4"
tempfile = "3.8"
